# mlib

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  VERSION  bitbucket-pipelines.yml
.github/workflows/: cmake.yml  codeql.yml  linux.yml  osx.yml  windows.yml
cmake/: definitions.cmake  mlibConfig.cmake.in
cmake/libraries/: eigen.cmake  pcl.cmake
cmake/macro/: config.cmake  cpack.cmake  cxx_flags.cmake  debug_flags.cmake  install.cmake  qt_creator.cmake  qt_support.cmake  status.cmake  targets.cmake  test_macro.cmake  utility.cmake  version.cmake
cmake/scripts/: script_diff.sh  show_diff.sh
cmake/tests/: runtest.cmake
doxygen/: Doxyfile.in  doxygen.cmake
gui/RPY/: CMakeLists.txt  RPY.cc  RPY.ui
gui/RPY/include/: lib_RPY.h
gui/RPY/qss/: RPY.qss
gui/RPY/src/: lib_RPY.cc
main/: main.cc
packaging/: CPackConfig.cmake  CPackSourceConfig.cmake  DS_Store.scpt
python/: mlibpy.cmake  mlibpy_env.yml
python/tests/: conftest.py
scripts/: README.txt  TODO.txt  astyle.rc  check_indentation.sh  fix_tests  generate_readme  indent  list_symbols_in_dylib.sh  make_deb.sh  run_pytest.sh  setup_astyle.sh  tag
source/_python/: types.h
source/core/: version.cc  version_py.cc
source/finance/: black_scholes.cc
source/geo/: coordinates.cc  time_converter.cc
source/math/: algebra.cc  angle.cc  arithmetic.cc  convolution.cc  euclidean_geometry.cc  geometry.cc  integral.cc  math_sequence.cc  point.cc  spline.cc  statistic.cc  utility.cc
source/pcl/: bounding_box.cc  cluster.cc  downsampling.cc  io.cc  math.cc  polyline.cc  segmentation.cc
source/utility/: color.cc  config_file.cc  file.cc  io.cc  logger.cc  progress_bar.cc  string.cc  types.cc
tests/: test.h  test_compare.h  tests.cmake
tests/_void/: void_00.cc
tests/algebra/: polynomial_00.cc  polynomial_00.output  polynomial_01.cc  polynomial_01.output
tests/angle/: angle_00.cc  angle_00.output  angle_and_axis_of_rotation_matrix_00.cc  angle_and_axis_of_rotation_matrix_00.output  angle_of_rotation_matrix_00.cc  angle_of_rotation_matrix_00.output  angle_of_rotation_matrix_01.cc  angle_of_rotation_matrix_02.cc  angle_of_rotation_matrix_02.output  convert_angle_to_vector_00.cc  convert_angle_to_vector_00.output  convert_angle_to_vector_01.cc  convert_angle_to_vector_01.output  convert_points_to_angle_00.cc  convert_points_to_angle_00.output
tests/arithmetic/: decimal_to_binary_00.cc  decimal_to_binary_00.output  max_00.cc  max_00.output  min_00.cc  min_00.output  normalize_00.cc  normalize_00.output  pythagoras_00.cc  pythagoras_00.output
tests/coding/: huffman_00.cc  huffman_00.output
tests/complex/: complex_00.cc  complex_00.output
tests/convolution/: convolution_00.cc  convolution_00.output
tests/eigen/: conversion_00.cc  conversion_00.output  conversion_01.cc  conversion_01.output
tests/finance/: black_scholes_00.cc  black_scholes_00.output
tests/generic/: gauss_elimination_00.cc  gauss_elimination_00.output  integral_00.cc  integral_00.output  math_utility_00.cc  math_utility_00.output  math_utility_01.cc  math_utility_01.output  math_utility_02.cc  math_utility_02.output  math_utility_03.cc  math_utility_03.output  math_utility_04.cc  math_utility_04.output  math_utility_05.cc  math_utility_05.output  math_utility_06.cc  math_utility_06.output  math_utility_07.cc  math_utility_07.output  math_utility_08.cc  math_utility_08.output  math_utility_09.cc  math_utility_09.output  math_utility_10.cc  math_utility_10.output  swap_lines_00.cc  swap_lines_00.output  upper_triangular_00.cc  upper_triangular_00.output
tests/geo/: coordinates_00.cc  coordinates_00.output  time_converter_00.cc  time_converter_00.output
tests/geometry/: clothoid_00.cc  clothoid_00.output  clothoid_01.cc  clothoid_01.output  clothoid_02.cc  clothoid_02.output  clothoid_03.cc  clothoid_03.output  segment_00.cc  segment_00.output  segment_01.cc  segment_01.output  segment_02.cc  segment_02.output
tests/math_sequence/: mat_seq_00.cc  mat_seq_00.output
tests/matrix/: CMakeLists.txt  best_affine_transformation_00.cc  best_affine_transformation_00.output  decomposition_00.cc  decomposition_00.output  decomposition_01.cc  decomposition_01.output  identity_matrix_00.cc  identity_matrix_00.output  matrix_00.cc  matrix_00.output  matrix_01.cc  matrix_01.output  matrix_02.cc  matrix_02.output  matrix_03.cc  matrix_03.output  matrix_04.cc  matrix_04.output  rotation_matrix_00.cc  rotation_matrix_00.output  rotation_matrix_01.cc  rotation_matrix_01.output  rotation_matrix_02.cc  rotation_matrix_02.output  rotation_matrix_03.cc  rotation_matrix_03.output  rotation_matrix_04.cc  rotation_matrix_04.output  rotation_matrix_05.cc  rotation_matrix_05.output  rotation_matrix_06.cc  rotation_matrix_06.output  rototranslation_matrix_00.cc  rototranslation_matrix_00.output  rototranslation_matrix_01.cc  rototranslation_matrix_01.output  rototranslation_matrix_02.cc  rototranslation_matrix_02.output  rototranslation_matrix_03.cc  (+3 more)
tests/pcl/: best_fitting_plane_00.cc  best_fitting_plane_00.output  pcl_00.cc  pcl_00.output  pcl_01.cc  pcl_01.output  pcl_02.cc  pcl_02.output  pcl_03.cc  pcl_03.output  pcl_bb_00.cc  pcl_bb_00.output  pcl_math_00.cc  pcl_math_00.output  poly_test.pcd  poly_test.txt  polyline_00.cc  polyline_00.output  polyline_01.cc  polyline_01.output  polyline_02.cc  polyline_02.output  polyline_03.cc  polyline_03.output
tests/point/: centroid_00.cc  centroid_00.output  euclidean_geometry_00.cc  euclidean_geometry_00.output  euclidean_geometry_01.cc  euclidean_geometry_01.output  euclidean_geometry_02.cc  euclidean_geometry_02.output  point_00.cc  point_00.output  point_01.cc  point_01.output  point_02.cc  point_02.output  point_03.cc  point_03.output  point_04.cc  point_04.output  point_05.cc  point_05.output  point_06.cc
tests/statistic/: mean_00.cc  mean_00.output
tests/utility/: color_00.cc  color_00.output  config_parser_00.cc  config_parser_00.ini  config_parser_00.output  logger_00.cc  logger_00.output  progress_bar_00.cc  progress_bar_01.cc  progress_bar_01.output  string_00.cc  string_00.output  types_00.cc  (+9 more)
(+140 files in other folders)
